[gd_scene load_steps=3 format=3 uid="uid://cm51m7sqnek5g"]

[ext_resource type="Texture2D" uid="uid://bs5xc3ber2vpp" path="res://ui/controller_icon.png" id="1_0diii"]
[ext_resource type="Script" uid="uid://b73xrf5p6416u" path="res://ui/controller_selection_panel.gd" id="1_nbc2l"]

[node name="ControllerSelectionPanel" type="PanelContainer"]
offset_right = 240.0
offset_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nbc2l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("1_0diii")
expand_mode = 3
stretch_mode = 5

[node name="DeviceNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DEVICE NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ControllerStatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PRESS A TO JOIN"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
